opportunities/base.html added; fixed issues with low contrast elements

--- a/commcare_connect/static/sass/project.scss
+++ b/commcare_connect/static/sass/project.scss
@@ -1,4 +1,9 @@
 @import 'custom_bootstrap_vars';
+
+//bootswatch color customization
+$yellow: #e2872c;
+$dropdown-link-color: #373737;
+
 @import '~bootswatch/dist/flatly/variables';
 @import '~bootstrap/scss/bootstrap';
 @import '~bootswatch/dist/lumen/bootswatch';
